# ElasticFusion

./: CMakeLists.txt  README.md
CMake/: CudaComputeTargetFlags.cmake  FindOpenNI2.cmake  FindRealSense2.cmake
Core/: CMakeLists.txt  Defines.h
Core/Utils/: Parse.cpp
GPUTest/: CMakeLists.txt  GPUTest.cpp
GUI/: CMakeLists.txt  Main.cpp  MainController.cpp
GUI/Tools/: CameraInterface.h  GUI.h  LiveLogReader.cpp  RealSenseInterface.cpp  RealSenseInterface.h
